vcl: fdo#87510 regression in GetFontMetric

Unfortunately when I refactored the code some time ago in commit 588bb542bebd
I forgot to remove the original assignment to mnExtLeading. This fixes this issue.

Change-Id: I9ef514c1a28ec72747fed865a47c41a1193ce1b9